--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -2,166 +2,122 @@
    width: 100%;
    height: 100%;
    position: relative;
-   padding: 4.75rem 2rem;
+   padding: 2rem 1.5rem;
+   // padding: 0 1.5rem;
    
-   background-color: var(--grayish-blue);
    background-color: hsl(206,47,93);
    
    display: flex;
    flex-direction: column;
-   justify-content: center;
+   justify-content: flex-start;
    align-items: center;
    text-align: center;
    
    @include table {
-      padding: 10.25rem 2rem;
+      // padding: 2.625rem 1.5rem;
    }
 
-   .main__container {
-      max-width: 635px;
+   &__header {
+      max-width: 700px;
       display: flex;
       flex-direction: column;;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-   }
-
-   &__content {
-      width: 100%;
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: repeat(2, 1fr);
-      grid-template-areas:
-         "box2"
-         "box3";
       
       @include table {
-         grid-template-columns: repeat(2, 1fr);
-         grid-template-rows: 1fr;
-         grid-template-areas: 
-            "box2 box3";
+         justify-content: flex-start;
+
       }
-   }
-}
-
-.main__box {
-   width: 100%;
-   height: 100%;
-
-   display: flex;
-   flex-direction: column;
-   justify-content: flex-start;
-   align-items: flex-start;
-   text-align: left;
-   padding: 1.5rem;
-
-   @include table {
-      padding: 2.5rem;
-   }
-}
-
-.box1 {
-   grid-area: box1;
-   color: black;
-   background-color: white;
-   border-top-left-radius: 5px;
-   border-top-right-radius: 5px;
-
-   padding: 2rem 1.5rem;
-
-   @include table {
-      padding: 2.75rem 2.5rem;
    }
 
    &__title {
       margin: 0;
       font-size: 1.25rem;
-      line-height: 1;
-      color: var(--cyan);
-      margin-bottom: 1.5rem;
+      font-weight: 600;
+      line-height: 1.5;
+      margin-bottom: .5rem;
+      color: var(--dark-grayish-blue);
       
       @include table {
-         font-size: 1.375rem;
+         font-size: 2.25rem;
       }
    }
    
-   &__subtitle {
-      margin: 0;
-      font-size: .875rem;
-      color: var(--bright-yellow);
-      line-height: 1.4;
-      margin-bottom: 1rem;
-      
-      @include table {
-         // border: 1px solid red;
-         font-size: 1.125rem;
-         margin-bottom: .5rem;
-      }
-   }
-}
-
-.box2 {
-   grid-area: box2;
-   background-color: var(--cyan);
-   color: white;
-
-   @include table {
-      border-bottom-left-radius: 5px;
-   }
-
-   &__title {
-      margin: 0;
-      line-height: 1;
-      font-size: 1.125rem;
-      margin-bottom: 1rem;
-   }
-
    &__txt {
-      color: white;
-      line-height: 1.5;
-      font-size: .875rem;
+      font-size: .8125rem;
+      line-height: 1.6;
 
-      span {
-         font-size: 2rem;
-         font-weight: 700;
+      @include table {
+         font-size: 1.125rem;
       }
    }
 }
 
-.box3 {
-   grid-area: box3;
-   background-color: #4ABEBD;
-   border-bottom-left-radius: 5px;
-   border-bottom-right-radius: 5px;
+.box {
+   width: 100%;
+   margin-top: 3.5rem;
+   display: grid;
+   grid-template-columns: 1fr;
+   justify-content: flex-start;
+   align-items: center;
 
    @include table {
-     padding: 2.5rem 2.5rem 1rem;
-     border-bottom-right-radius: 5px;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 1fr;
    }
-
-   &__title {
-      margin: 0;
-      line-height: 1;
-      font-size: 1.125rem;
-      margin-bottom: 1.5rem;
+   
+   &__images {
+      width: 100%;
    }
+   
+   &__body {
+      margin-top: 2.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      text-align: center;
 
-   &__item {
-      color: white;
-      font-size: 0.875rem;
-      line-height: 1.35;
-    }
-
+      @include table {
+         text-align: left;
+      }
+   }
 }
 
+.services {
 
-.main__txt {
-   line-height: 1.9;
-   color: var(--grayish-blue);
-
+   .service {
+      
+      &:not(:last-child) {
+         margin-bottom: 2.5rem;
+      }
+      
+      &__title {
+         font-size: 1.125rem;
+         font-weight: 600;
+         margin-bottom: 1rem;
+         
+         @include table {
+            font-size: 1.5rem;
+         }
+      }
+      
+      &__description {
+         font-size: .8125rem;
+         line-height: 1.4;
+      
+         @include table {
+            font-size: 1rem;
+         }
+      }
+   }
+   
    @include table {
-      line-height: 1.5;
+      margin-left: 5rem;
+      max-width: 350px;
    }
 }
+
 
 .btn {
    
