--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,5 +6,8 @@
 
 @import "blocks/header";
 @import "blocks/main";
+@import "blocks/clipboard";
+@import "blocks/supercharge";
 @import "blocks/logos";
+@import "blocks/clip";
 @import "blocks/footer";
