--- a/src/scss/blocks/_clip.scss
+++ b/src/scss/blocks/_clip.scss
@@ -1,51 +1,80 @@
 .clip {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    padding: 4.25rem 1.5rem;
+   width: 100%;
+   height: 100%;
+   position: relative;
+   padding: 0 1.5rem;
     
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-items: center;
+   text-align: center;
     
-    @include table {
-        padding: 12rem 1.5rem 5rem;
+   @include table {
+      padding: 12rem 1.5rem 5rem;
 
-    }
+   }
     
-    &__header {
-        max-width: 700px;
-        display: flex;
-        flex-direction: column;;
-        justify-content: flex-start;
-        align-items: center;
+   &__header {
+      max-width: 700px;
+      margin-top: 9rem;
+      display: flex;
+      flex-direction: column;;
+      justify-content: flex-start;
+      align-items: center;
         
-        @include table {
-        justify-content: flex-start;
-        }
-    }
+      @include table {
+         justify-content: flex-start;
+      }
+   }
 
-    &__title {
-        margin: 0;
-        font-size: 1.25rem;
-        font-weight: 600;
-        line-height: 1.5;
-        margin-bottom: .5rem;
-        color: var(--dark-grayish-blue);
-        
-        @include table {
-           font-size: 2.25rem;
-        }
-     }
+   &__title {
+      margin: 0;
+      font-size: 1.25rem;
+      font-weight: 600;
+      line-height: 1.5;
+      margin-bottom: .25rem;
+      color: var(--dark-grayish-blue);
+      
+      @include table {
+         font-size: 2.25rem;
+      }
+   }
      
-     &__txt {
-        font-size: .8125rem;
-        line-height: 1.6;
-  
-        @include table {
-           font-size: 1.125rem;
-        }
-     }
+   &__txt {
+      font-size: .8125rem;
+      line-height: 1.6;
+      padding: 0 .5rem;
+
+      @include table {
+         font-size: 1.125rem;
+      }
+   }
+
+   &__buttons {
+      width: 100%;
+      margin-top: 2.2rem;
+      
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      
+      @include table {
+          margin-top: 1.5rem;
+          flex-direction: row;
+      } 
+   }
+
+   &__button {
+      &:last-child {
+         margin-top: 1.25rem;
+      }
+
+      @include table {  
+         &:not(:last-child) {
+            margin-right: 2rem;
+         }
+      }
+   }
 }
