--- a/src/scss/blocks/_clipboard.scss
+++ b/src/scss/blocks/_clipboard.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: relative;
-    padding: 4rem 1.5rem 2rem;
+    padding: 0 1rem;
     
     display: flex;
     flex-direction: column;
@@ -16,6 +16,7 @@
    
     &__header {
         max-width: 700px;
+        margin-top: 9.25rem;
         display: flex;
         flex-direction: column;;
         justify-content: flex-start;
@@ -51,7 +52,7 @@
      &__image {
          width: 100%;
          height: 100%;
-         margin-top: 2.5rem;
+         margin-top: 3rem;
 
          @include table {
              margin-top: 6rem;
