--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -4,9 +4,11 @@
     color: var(--dark-grayish-blue);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
+    margin-top: 10.5rem;
+    padding: 3rem 0;
     
     @include table {
         padding: 2rem 10rem;
@@ -18,30 +20,43 @@
     &__logo {
         width: 2.5rem;
         height: 2.5rem;
+        margin-bottom: 1rem;
     }
     
-    .social {
-        .icon {
-            color: var(--dark-grayish-blue);
-            font-size: 2rem; 
-            &:not(:last-child){
-                margin-right: 1rem ;
-            }
-
-        }
-    }
- 
     .columns {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        align-items: baseline;
+        align-items: center;
         text-align: center;
+        font-size: 0.875rem;
+
+        @include table {
+            align-items: baseline;
+        }
         
         &__item {
-            &:not(:last-child){
-                margin-bottom: 1rem ;
+            margin-top: 1.5rem;
+            @include table {
+                &:not(:last-child){
+                    margin-bottom: 1rem ;
+                }
             }
+        }
+    }
+
+    .social {
+        margin-top: 3rem;
+        .icon {
+            color: var(--dark-grayish-blue);
+            font-size: 1.3rem; 
+            &:not(:last-child){
+                margin-right: 1rem ;
+            }
+            @include table {
+                font-size: 2rem;
+            }
+
         }
     }
 }
