--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -2,10 +2,7 @@
    width: 100%;
    height: 100%;
    position: relative;
-   padding: 2rem 1.5rem;
-   // padding: 0 1.5rem;
-   
-   background-color: hsl(206,47,93);
+   padding: 0 1.5rem;
    
    display: flex;
    flex-direction: column;
@@ -18,6 +15,8 @@
    }
 
    &__header {
+      width: 100%;
+      margin-top: 7.75rem;
       max-width: 700px;
       display: flex;
       flex-direction: column;;
@@ -33,7 +32,7 @@
    &__title {
       margin: 0;
       font-size: 1.25rem;
-      font-weight: 600;
+      font-weight: bold;
       line-height: 1.5;
       margin-bottom: .5rem;
       color: var(--dark-grayish-blue);
@@ -130,9 +129,8 @@
    border-radius: 25px;
  
    font-size: .875rem;
-   font-weight: 400;
    letter-spacing: .1rem;
-   padding: .875rem 2rem;
+   padding: .9rem 2rem;
    
    @include table {
       width: fit-content;
