--- a/src/scss/blocks/_logos.scss
+++ b/src/scss/blocks/_logos.scss
@@ -3,14 +3,27 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 5rem;
+    align-content: center;
+    text-align: center;
+    margin-top: 4rem;
 
     @include table {
         flex-direction: row;
     }
 
     &__logo {
-        width: 100%;
-        padding: 2rem 6rem;
+        width: 110px;
+        height: 34px;
+        align-self: center;
+        margin-bottom: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    &__img {
+        display: block;
+        // max-width: 100%;
+        max-height: 100%;
     }
 }
