--- a/src/scss/blocks/_supercharge.scss
+++ b/src/scss/blocks/_supercharge.scss
@@ -45,6 +45,7 @@
      &__txt {
         font-size: .8125rem;
         line-height: 1.6;
+        margin-bottom: 4.5rem;
   
         @include table {
            font-size: 1.125rem;
@@ -66,24 +67,28 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 2rem;
 
     &__icon {
-        width: 36px;
-        height: 36px;
-        margin-top: 2rem;
+        height: 30px;
+        img {
+            height: 100%;
+        }
     }
 
     &__title {
         font-size: 1rem;
+        line-height: 1;
+        font-weight: 600;
+        letter-spacing: .05rem;
         color: var(--dark-grayish-blue);
-        margin-top: 1rem;
+        margin-top: 2rem;
     }
 
     &__description {
         font-size: .75rem;
-        line-height: 1.5;
-        margin-top: 1rem;
+        line-height: 1.7;
+        margin-top: 1.5rem;
+        margin-bottom: 2.5rem;
         padding: 0 .5rem;
 
     }
