--- a/src/scss/blocks/_clipboard.scss
+++ b/src/scss/blocks/_clipboard.scss
@@ -11,7 +11,7 @@
     text-align: center;
     
     @include table {
-        padding: 12rem 1.5rem 5rem;
+        padding: 3rem 1.5rem;
     }
    
     &__header {
