--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     width: 100%;
-    background-color: var(--grayish-blue);
+    background-color: #F5F6F8;
     color: var(--dark-grayish-blue);
     display: flex;
     flex-direction: column;
@@ -38,10 +38,16 @@
         
         &__item {
             margin-top: 1.5rem;
+            cursor: pointer;
+
             @include table {
                 &:not(:last-child){
                     margin-bottom: 1rem ;
                 }
+            }
+
+            &:hover {
+                color: var(--strong-cyan)
             }
         }
     }
@@ -51,13 +57,17 @@
         .icon {
             color: var(--dark-grayish-blue);
             font-size: 1.3rem; 
+
+            &:hover {
+                color: var(--strong-cyan)
+            }
+
             &:not(:last-child){
                 margin-right: 1rem ;
             }
             @include table {
                 font-size: 2rem;
             }
-
         }
     }
 }
