--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -8,13 +8,13 @@
     align-items: center;
     text-align: center;
     
-    background-image: url('../../assets/images/bg-header-mobile.png');
+    background-image: url('../assets/images/bg-header-mobile.png');
     background-position: top center;
     background-size: 100%;
     background-repeat: no-repeat;
     
     @include table {
-        background-image: url('../../assets/images/bg-header-desktop.png');
+        background-image: url('../assets/images/bg-header-desktop.png');
     }
 
     &__logo {
