--- a/src/scss/blocks/_supercharge.scss
+++ b/src/scss/blocks/_supercharge.scss
@@ -97,11 +97,11 @@
     }
 
     &__description {
-        font-size: .75rem;
+        font-size: .875rem;
         line-height: 1.7;
         margin-top: 1.5rem;
         margin-bottom: 2.5rem;
-        padding: 0 .5rem;
+        padding: 0 1rem;
 
     }
 }
